--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ml-lit-components",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.8",
   "type": "module",
   "main": "dist/index.js",
   "files": [
@@ -10,12 +10,16 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "compile": "tsc",
     "preview": "vite preview"
   },
   "dependencies": {
-    "lit": "^3.1.2"
+    "lit": "^3.1.2",
+    "react": "^18.3.1"
   },
   "devDependencies": {
+    "@lit/react": "^1.0.5",
+    "@vitejs/plugin-react": "^4.3.0",
     "sass": "^1.77.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
