--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "compile": "tsc",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "lit": "^3.1.2",
     "react": "^18.3.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.5.0",
     "@lit/react": "^1.0.5",
+    "@storybook/addon-essentials": "^8.1.6",
+    "@storybook/addon-links": "^8.1.6",
+    "@storybook/blocks": "^8.1.6",
+    "@storybook/test": "^8.1.6",
+    "@storybook/web-components": "^8.1.6",
+    "@storybook/web-components-vite": "^8.1.6",
     "@vitejs/plugin-react": "^4.3.0",
     "sass": "^1.77.4",
+    "storybook": "^8.1.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
