added ReactButton stoy

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "lit": "^3.1.2",
+    "ml-lit-components": "^0.0.20",
     "react": "^18.3.1"
   },
   "devDependencies": {
@@ -32,6 +33,8 @@
     "@storybook/addon-essentials": "^8.1.6",
     "@storybook/addon-links": "^8.1.6",
     "@storybook/blocks": "^8.1.6",
+    "@storybook/react": "^8.1.6",
+    "@storybook/react-vite": "^8.1.6",
     "@storybook/test": "^8.1.6",
     "@storybook/web-components": "^8.1.6",
     "@storybook/web-components-vite": "^8.1.6",
