--- a/package.json
+++ b/package.json
@@ -28,20 +28,29 @@
     "react": "^18.3.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.5.0",
+    "@chromatic-com/storybook": "^4.1.0",
+    "@lhci/cli": "^0.15.1",
     "@lit/react": "^1.0.5",
-    "@storybook/addon-essentials": "^8.1.6",
-    "@storybook/addon-links": "^8.1.6",
-    "@storybook/blocks": "^8.1.6",
-    "@storybook/react": "^8.1.6",
-    "@storybook/react-vite": "^8.1.6",
-    "@storybook/test": "^8.1.6",
-    "@storybook/web-components": "^8.1.6",
-    "@storybook/web-components-vite": "^8.1.6",
+    "@playwright/test": "^1.54.2",
+    "@storybook/addon-docs": "^9.1.1",
+    "@storybook/addon-links": "^9.1.1",
+    "@storybook/react-vite": "^9.1.1",
+    "@storybook/web-components-vite": "^9.1.1",
+    "@types/react": "^19.1.9",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "chromatic": "^13.1.3",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-lit": "^2.2.1",
+    "pa11y-ci": "^4.0.0",
     "sass": "^1.77.4",
-    "storybook": "^8.1.6",
+    "storybook": "^9.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
-  }
+  },
+  "repository": "https://github.com/FranCeballos/component-test.git",
+  "author": "FranCeballos <104146989+FranCeballos@users.noreply.github.com>",
+  "license": "MIT"
 }
