--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,18 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn compile
 
+  lint:
+    name: Lint (ESLint)
+    runs-on: ubuntu-latest
+    needs: typecheck
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: yarn install --frozen-lockfile
+      - run: yarn lint
+
   build:
     name: Build (Lit)
     runs-on: ubuntu-latest
