--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "a11y": "pa11y-ci http://localhost:6006",
+    "lhci": "lhci autorun",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "lit": "^3.1.2",
