--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,15 @@ jobs:
           node-version: 20
       - run: yarn install --frozen-lockfile
       - run: yarn build:lit
+
+  storybook:
+    name: Build Storybook
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: yarn install --frozen-lockfile
+      - run: yarn build-storybook
