--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,3 +53,16 @@ jobs:
           node-version: 20
       - run: yarn install --frozen-lockfile
       - run: yarn build-storybook
+
+  chromatic:
+    name: Chromatic Visual Regression
+    runs-on: ubuntu-latest
+    needs: storybook
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: yarn install --frozen-lockfile
+      - name: Publish to Chromatic
+        run: npx chromatic --project-token=${{ secrets.CHROMATIC_PROJECT_TOKEN }}
