--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,3 +76,25 @@ jobs:
       - run: yarn install --frozen-lockfile
       - name: Publish to Chromatic
         run: npx chromatic --project-token=${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+
+  a11y:
+    name: Accessibility (pa11y)
+    runs-on: ubuntu-latest
+    needs: storybook
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: yarn install --frozen-lockfile
+      - run: yarn build-storybook
+      - name: Install static server
+        run: yarn global add serve
+      - name: Start Storybook static server
+        run: serve -s storybook-static -l 6006 &
+      - name: Wait for Storybook to be ready
+        run: npx wait-on http://localhost:6006
+      - name: Run pa11y-ci
+        run: npx pa11y-ci http://localhost:6006
