--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,3 +100,21 @@ jobs:
         run: npx pa11y-ci http://localhost:6006
         env:
           PUPPETEER_ARGS: "--no-sandbox --disable-setuid-sandbox"
+
+  performance:
+    name: Performance Budgets (Lighthouse)
+    runs-on: ubuntu-latest
+    needs: storybook
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: yarn install --frozen-lockfile
+      - run: yarn build-storybook
+      - name: Install static server
+        run: yarn global add serve
+      - name: Run Lighthouse CI
+        run: npx lhci autorun --config=./lighthouserc.json
