--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,3 +118,27 @@ jobs:
         run: yarn global add serve
       - name: Run Lighthouse CI
         run: npx lhci autorun --config=./lighthouserc.json
+
+  cross-browser:
+    name: Cross-Browser Tests (Playwright)
+    runs-on: ubuntu-latest
+    needs: storybook
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: yarn install --frozen-lockfile
+      - run: yarn build-storybook
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Install static server
+        run: yarn global add serve
+      - name: Start Storybook static server
+        run: serve -s storybook-static -l 6006 &
+      - name: Wait for Storybook to be ready
+        run: npx wait-on http://localhost:6006
+      - name: Run Playwright tests
+        run: yarn test:e2e
