--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@vitejs/plugin-react": "^4.3.0",
     "sass": "^1.77.4",
     "storybook": "^8.1.6",
+    "storybook-dark-mode": "^4.0.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
